Nouvel objet Livre

--- a/package.xml
+++ b/package.xml
@@ -102,6 +102,7 @@
         <members>Jobs__c</members>
         <members>Lead</members>
         <members>LeadCleanInfo</members>
+        <members>Livre__c</members>
         <members>Macro</members>
         <members>MacroAction</members>
         <members>MacroInstruction</members>
@@ -123,6 +124,10 @@
         <members>User</members>
         <members>UserProvisioningRequest</members>
         <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Livre__c</members>
+        <name>CustomTab</name>
     </types>
     <types>
         <members>unfiled$public</members>
@@ -183,6 +188,7 @@
         <members>Lead-Lead %28Sales%29 Layout</members>
         <members>Lead-Lead %28Support%29 Layout</members>
         <members>Lead-Lead Layout</members>
+        <members>Livre__c-Présentation Livre</members>
         <members>Macro-Macro Layout</members>
         <members>Opportunity-Opportunity %28Marketing%29 Layout</members>
         <members>Opportunity-Opportunity %28Sales%29 Layout</members>
@@ -236,6 +242,7 @@
         <members>Lead.TodaysLeads</members>
         <members>Lead.ViewCustom1</members>
         <members>Lead.ViewCustom2</members>
+        <members>Livre__c.All</members>
         <members>Opportunity.AllOpportunities</members>
         <members>Opportunity.ClosingNextMonth</members>
         <members>Opportunity.ClosingThisMonth</members>
